--- a/p8105_hw5_jw4489.md
+++ b/p8105_hw5_jw4489.md
@@ -2,3 +2,52 @@ p8105_hw5_jw4489
 ================
 2023-11-15
 
+``` r
+library(tidyverse)
+library(rvest)
+```
+
+## Problem 1
+
+##### Describe the raw data.
+
+``` r
+raw_df1 = read.csv("hw5data/homicide-data.csv")
+
+view(raw_df1)
+```
+
+According to the raw data, we can see that it has 52179 observations,
+and 12 variables in total.
+
+``` r
+df1 = raw_df1 |> 
+  janitor::clean_names() |> 
+  mutate(city_state = paste(city, state, sep = ", "))
+
+view(df1)
+```
+
+``` r
+df1_summarized = df1 |>
+  group_by(city_state) |>
+  summarize(total_homocides = n(),
+             unsolved_homicides = sum(disposition %in% c("Closed without arrest", "Open/No arrest")))
+
+df1_summarized
+```
+
+    ## # A tibble: 51 × 3
+    ##    city_state      total_homocides unsolved_homicides
+    ##    <chr>                     <int>              <int>
+    ##  1 Albuquerque, NM             378                146
+    ##  2 Atlanta, GA                 973                373
+    ##  3 Baltimore, MD              2827               1825
+    ##  4 Baton Rouge, LA             424                196
+    ##  5 Birmingham, AL              800                347
+    ##  6 Boston, MA                  614                310
+    ##  7 Buffalo, NY                 521                319
+    ##  8 Charlotte, NC               687                206
+    ##  9 Chicago, IL                5535               4073
+    ## 10 Cincinnati, OH              694                309
+    ## # ℹ 41 more rows
