--- a/p8105_hw5_jw4489.md
+++ b/p8105_hw5_jw4489.md
@@ -31,14 +31,14 @@ view(df1)
 ``` r
 df1_summarized = df1 |>
   group_by(city_state) |>
-  summarize(total_homocides = n(),
+  summarize(total_homicides = n(),
              unsolved_homicides = sum(disposition %in% c("Closed without arrest", "Open/No arrest")))
 
 df1_summarized
 ```
 
     ## # A tibble: 51 × 3
-    ##    city_state      total_homocides unsolved_homicides
+    ##    city_state      total_homicides unsolved_homicides
     ##    <chr>                     <int>              <int>
     ##  1 Albuquerque, NM             378                146
     ##  2 Atlanta, GA                 973                373
@@ -51,3 +51,37 @@ df1_summarized
     ##  9 Chicago, IL                5535               4073
     ## 10 Cincinnati, OH              694                309
     ## # ℹ 41 more rows
+
+##### Estimate the proportion of homicides that are unsolve.
+
+``` r
+baltimore_prop_test = 
+  prop.test(df1_summarized |>
+            filter(city_state == "Baltimore, MD") |>
+            pull(unsolved_homicides),
+            df1_summarized |>
+            filter(city_state == "Baltimore, MD") |>
+            pull(total_homicides))
+
+baltimore_tidy = baltimore_prop_test |>
+  broom::tidy()
+
+baltimore_tidy
+```
+
+    ## # A tibble: 1 × 8
+    ##   estimate statistic  p.value parameter conf.low conf.high method    alternative
+    ##      <dbl>     <dbl>    <dbl>     <int>    <dbl>     <dbl> <chr>     <chr>      
+    ## 1    0.646      239. 6.46e-54         1    0.628     0.663 1-sample… two.sided
+
+``` r
+estimate = baltimore_tidy |>
+  pull(estimate)
+conf_low = baltimore_tidy |>
+  pull(conf.low)
+conf_high = baltimore_tidy |>
+  pull(conf.high)
+```
+
+Hence the estimated proportion is 0.6455607, and the confidence interval
+is (0.6275625, 0.6631599).
