--- a/p8105_hw5_jw4489.md
+++ b/p8105_hw5_jw4489.md
@@ -9,7 +9,7 @@ library(rvest)
 
 ## Problem 1
 
-##### Describe the raw data.
+##### Describe the raw data
 
 ``` r
 raw_df1 = read.csv("hw5data/homicide-data.csv")
@@ -52,7 +52,7 @@ df1_summarized
     ## 10 Cincinnati, OH              694                309
     ## # ℹ 41 more rows
 
-##### Estimate the proportion of homicides that are unsolve.
+##### Estimate the proportion of homicides that are unsolve
 
 ``` r
 baltimore_prop_test = 
@@ -85,3 +85,58 @@ conf_high = baltimore_tidy |>
 
 Hence the estimated proportion is 0.6455607, and the confidence interval
 is (0.6275625, 0.6631599).
+
+##### Run prop.test for each of the cities in the dataset
+
+``` r
+all_city_test = df1_summarized |>
+  janitor::clean_names() |>
+  mutate(prop_test_all = purrr::map2(unsolved_homicides, total_homicides, \(x, y) prop.test(x = x, n = y)),
+         prop_test_tidy = purrr::map(prop_test_all, broom::tidy)) |> 
+  select(- prop_test_all) |>
+  unnest(prop_test_tidy) |>
+  janitor::clean_names() |>
+  select(city_state, estimate, conf_low, conf_high) |>
+  mutate(city_state = fct_reorder(city_state, estimate))
+```
+
+    ## Warning: There was 1 warning in `mutate()`.
+    ## ℹ In argument: `prop_test_all = purrr::map2(...)`.
+    ## Caused by warning in `prop.test()`:
+    ## ! Chi-squared approximation may be incorrect
+
+``` r
+all_city_test
+```
+
+    ## # A tibble: 51 × 4
+    ##    city_state      estimate conf_low conf_high
+    ##    <fct>              <dbl>    <dbl>     <dbl>
+    ##  1 Albuquerque, NM    0.386    0.337     0.438
+    ##  2 Atlanta, GA        0.383    0.353     0.415
+    ##  3 Baltimore, MD      0.646    0.628     0.663
+    ##  4 Baton Rouge, LA    0.462    0.414     0.511
+    ##  5 Birmingham, AL     0.434    0.399     0.469
+    ##  6 Boston, MA         0.505    0.465     0.545
+    ##  7 Buffalo, NY        0.612    0.569     0.654
+    ##  8 Charlotte, NC      0.300    0.266     0.336
+    ##  9 Chicago, IL        0.736    0.724     0.747
+    ## 10 Cincinnati, OH     0.445    0.408     0.483
+    ## # ℹ 41 more rows
+
+##### Create the plot
+
+``` r
+test_plot = all_city_test |>
+  ggplot(aes(x = city_state, y = estimate)) + 
+  geom_errorbar(aes(ymin = conf_low, ymax = conf_high)) +
+  geom_point() +
+  labs(title = "Estimates and CIs for each city",
+       x = "City, State",
+       y = "Proportion of Unsolved Homicides") +
+  theme(axis.text.x = element_text(size = 5, angle = 45, hjust = 1))
+
+test_plot
+```
+
+![](p8105_hw5_jw4489_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
