--- a/p8105_hw5_jw4489.md
+++ b/p8105_hw5_jw4489.md
@@ -5,6 +5,10 @@ p8105_hw5_jw4489
 ``` r
 library(tidyverse)
 library(rvest)
+library(dplyr)
+library(purrr)
+library(tidyr)
+library(broom)
 ```
 
 ## Problem 1
@@ -140,3 +144,46 @@ test_plot
 ```
 
 ![](p8105_hw5_jw4489_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
+
+## Problem 2
+
+##### Create a tidy dataframe containing data from all participants
+
+``` r
+file_names = list.files("./hw5data/hw5p2", pattern = "*.csv")
+```
+
+``` r
+df2 = data.frame(file_names = file_names) |>
+  mutate(data = map(file_names, ~read.csv(paste0("./hw5data/hw5p2", "/", .x)))) |>
+  unnest(data) 
+```
+
+``` r
+df2_tidy = df2 |>
+  mutate(subject_id = str_extract(file_names, "\\d+"),
+         arm = str_extract(file_names, "^[a-z]*")) |>
+  select(- file_names) |>
+  select(subject_id, arm, everything()) |>
+  pivot_longer(cols = starts_with("week_"),
+               names_to = "week",
+               values_to = "observations") |>
+  mutate(week = as.numeric(substr(week, 6, 7)))
+
+df2_tidy 
+```
+
+    ## # A tibble: 160 × 4
+    ##    subject_id arm    week observations
+    ##    <chr>      <chr> <dbl>        <dbl>
+    ##  1 01         con       1         0.2 
+    ##  2 01         con       2        -1.31
+    ##  3 01         con       3         0.66
+    ##  4 01         con       4         1.96
+    ##  5 01         con       5         0.23
+    ##  6 01         con       6         1.09
+    ##  7 01         con       7         0.05
+    ##  8 01         con       8         1.94
+    ##  9 02         con       1         1.13
+    ## 10 02         con       2        -0.88
+    ## # ℹ 150 more rows
