--- a/p8105_hw5_jw4489.md
+++ b/p8105_hw5_jw4489.md
@@ -187,3 +187,25 @@ df2_tidy
     ##  9 02         con       1         1.13
     ## 10 02         con       2        -0.88
     ## # ℹ 150 more rows
+
+##### Make the spaghetti plot
+
+``` r
+df2_plot = df2_tidy |>
+  ggplot(aes(x = week, y = observations, color = arm)) +
+  geom_line() +
+  facet_wrap(~ subject_id) +
+  labs(title = "Observations on each subject over time",
+       x = "Week",
+       y = "Value of Observations")
+
+df2_plot
+```
+
+![](p8105_hw5_jw4489_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
+
+According to the plots generated, we can see that, the experimental
+group shows an increasing pattern overall, but the controlled group
+doesn’t have any trends or patterns. Besides, we can also conclude that
+for most of the participants, the experimental group tends to have
+higher values than the controlled group.
