--- a/p8105_hw5_jw4489.Rmd
+++ b/p8105_hw5_jw4489.Rmd
@@ -145,10 +145,68 @@ df2_plot
 
 According to the plots generated, we can see that, the experimental group shows an increasing pattern overall, but the controlled group doesn't have any trends or patterns. Besides, we can also conclude that for most of the participants, the experimental group tends to have higher values than the controlled group. 
 
+## Problem 3
 
+##### Conduct a simulation to explore power in a one-sample t-test
 
+###### Set the event
+```{r}
+set.seed(1)
+n = 30
+sigma = 5
+alpha = 0.05
+mu_list = c(0, 1, 2, 3, 4, 5, 6)
+```
 
+###### Set the function
 
+```{r}
+test_result = function(mu, n = 30, sigma = 5, alpha = 0.05, repeats = 5000) {
+  result_df = data.frame(true_mean = rep(mu, repeats),
+                         estimated_mean = numeric(repeats),
+                         p_value = numeric(repeats)
+                         )
+  for (i in 1 : 5000) {
+    simulated_df <- rnorm(n, mean = mu, sd = sigma)
+    tidy_result = broom::tidy(t.test(simulated_df))
+  result_df$estimated_mean[i] = mean(simulated_df)
+  result_df$p_value[i] = tidy_result$p.value
+  }
+  result_df$power = mean(result_df$p_value < alpha)
+  return(result_df)
+}
+```
 
+###### Repeat the above for μ = {0, 1, 2, 3, 4, 5, 6}
 
+```{r}
+all_results = data.frame()
+
+for (mu in mu_list) {
+  one_result = test_result(mu)
+  all_results = rbind(one_result, all_results)
+}
+```
+
+###### Make the first plot
+
+```{r}
+plot1 = all_results |>
+  ggplot(aes(x = true_mean, y = power)) +
+  geom_point() +
+  geom_line() +
+  labs(title = "Association between effect size and power",
+       x_axis = "The true value of μ",
+       y_axis = "The proportion of times the null was rejected ")
+       
+plot1
+```
+
+From the plot generated, we can conclude that larger the effect size is, the test will get a higher power.  
+
+###### Make the second plot
+
+```{r}
+
+```
 
