--- a/p8105_hw5_jw4489.Rmd
+++ b/p8105_hw5_jw4489.Rmd
@@ -161,13 +161,13 @@ mu_list = c(0, 1, 2, 3, 4, 5, 6)
 ###### Set the function
 
 ```{r}
-test_result = function(mu, n = 30, sigma = 5, alpha = 0.05, repeats = 5000) {
-  result_df = data.frame(true_mean = rep(mu, repeats),
-                         estimated_mean = numeric(repeats),
-                         p_value = numeric(repeats)
+test_result = function(mu, n = 30, sigma = 5, alpha = 0.05, repeat_num = 5000) {
+  result_df = data.frame(true_mean = rep(mu, repeat_num),
+                         estimated_mean = numeric(repeat_num),
+                         p_value = numeric(repeat_num)
                          )
-  for (i in 1 : 5000) {
-    simulated_df <- rnorm(n, mean = mu, sd = sigma)
+  for (i in 1 : repeat_num) {
+    simulated_df = rnorm(n, mean = mu, sd = sigma)
     tidy_result = broom::tidy(t.test(simulated_df))
   result_df$estimated_mean[i] = mean(simulated_df)
   result_df$p_value[i] = tidy_result$p.value
@@ -207,6 +207,32 @@ From the plot generated, we can conclude that larger the effect size is, the tes
 ###### Make the second plot
 
 ```{r}
+plot2 = all_results |>
+  group_by(true_mean) |>
+  mutate(avg_estimate = mean(estimated_mean)) |>
+  ggplot(aes(x = true_mean, y = avg_estimate)) +
+  geom_line() +
+  labs(title = "Association between true mean and estimated mean",
+       x_axis = "True value of mu",
+       y_axis = "Average estimate mu")
 
+plot2
 ```
 
+###### Make the third plot
+
+```{r}
+plot3 = all_results |>
+  group_by(true_mean) |>
+  filter(p_value < alpha) |>
+  mutate(avg_estimate = mean(estimated_mean)) |>
+  ggplot(aes(x=true_mean, y = avg_estimate)) +
+  geom_line() +
+  labs(title = "Association between true mean and estimated mean in rejected",
+       x = "True Value of mu",
+       y = "Average estimate mu (rejected)") 
+
+plot3
+```
+
+From the plot generated, we can see that the sample average of μ̂ across tests for which the null is rejected is approximately equal to the true value of μ when μ equals 4, 5, 6. However, they are not equal when μ equals 0, 1, 2, 3. That is probably because that when the value of true μ is small, the test has a lower power, and thus the lower power lead to lower accuracy. 
